--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -23,7 +23,13 @@ body{
 .contenido-bienv{
 	background-color: #f7b617;
 	color: white;
+	margin-top: 50px;
 	margin-bottom: 50px;
+	padding: 100px;
+}
+
+.linea{
+	width: 100px;
 }
 
 /*inicio segunda sección*/
@@ -51,11 +57,47 @@ body{
 .contenido-segunda-caja{
 	background-color: black;
 	opacity:0.5;
-
+	width: 100%;
+	padding: 100px;
 }
 
 /*cuarta sección*/
 
 .cuarta-seccion{
 	background-color: #f7b617;
+	color: white;
+	padding: 100px;
+}
+
+.form-control{
+	background-color: #f7b617;
+	border-color: white;
+}
+
+/*cambio color placeholder con bootstrap*/
+.form-control::-webkit-input-placeholder { color: white; }
+.form-control:-moz-placeholder { color: white; }
+.form-control::-moz-placeholder { color: white; }
+.form-control:-ms-input-placeholder { color: white; }
+
+
+/*footer*/
+
+.footer{
+	background-color: #2b2b2b;
+	padding: 50px;
+}
+
+ul li{
+	color: white;
+	cursor: pointer;
+	list-style: none;
+}
+
+.texto-final{
+	color: white;
+}
+
+.img-empresa{
+	width: 50%;
 }
