--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -106,6 +106,14 @@ body{
 	width: 500px
 }
 
+@media (max-width:425px){
+	.mapa{
+		width:250px;
+		height: 300px;
+	}
+}
+
+
 .caja-mapa{/*intento ponerle borde al mapa pero no resulta, aparece borde y no caja
 	por eso borré el div que contenía esta clase, y la dejo acá para justificar que lo intenté*/
 	border: 1px solid white;
